--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+.landing {
+    background-image: url("../src/assets/landing.jpg");
+}
+
 .verse1 {
     background-image: url("../src/assets/v1.jpg");
 }
